# rust_aws_app_config

./: .gitignore  Cargo.toml  Makefile  README.md  template.yml
src/: error.rs  lib.rs
src/dtos/: mod.rs  my_config.rs
