[package]
name = "rust_aws_app_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.2.0"
lambda_runtime = "0.4.1"
log = "0.4.14"
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.72"
simple_logger = "1.15.0"
tokio = "1.13.0"
openssl = { version = '0.10.11', optional = true } #https://github.com/rust-embedded/cross/issues/229
lazy_static = "1.4.0"

[features]
default = ["reqwest/default-tls"]
vendored-openssl = ["openssl/vendored"]
rustls = ["reqwest/rustls-tls"]

[[bin]]
name = "handler"
path = "src/bin/handler.rs"
